--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "Rybus07/Rybus07.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Ryan Peters Headshot 2022.png"
   name             : "Ryan Arthur Micahel Peters"
   pronouns         : # example: "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Aspiring Data Scientist | Golfer"
   location         : "Baltimore, MD"
   employer         : "Hortifrut"
   uri              : # URL
