--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ repository               : "Rybus07/Rybus07.github.io"
 author:
   # Biographic information
   avatar           : "Ryan Peters Headshot 2022.png"
-  name             : "Ryan Arthur Micahel Peters"
+  name             : "Ryan A.M. Peters"
   pronouns         : # example: "he/him"  
   bio              : "Aspiring Data Scientist | Golfer"
   location         : "Baltimore, MD"
-  employer         : "Hortifrut"
+  employer         : "Actively Seeking Job Opportunities"
   uri              : # URL
   email            : "ryan.peters000@gmail.com" 
 
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
