--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "he/him"  
   bio              : "Aspiring Data Scientist | Golfer"
   location         : "Baltimore, MD"
-  employer         : "Actively Seeking Job Opportunities"
+  employer         : "Seeking Job Opportunities"
   uri              : # URL
   email            : "ryan.peters000@gmail.com" 
 
