--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "Rybus07/Rybus07.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile pic 1.png"
+  avatar           : "Ryan Peters Headshot 2022.png"
   name             : "Ryan A.M. Peters"
   pronouns         : # example: "he/him"  
   bio              : "Aspiring Data Scientist | Golfer"
